changed project java version